<resources>
    <string name="app_name">Biodata Dokter</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login atau Daftar</string>
    <string name="action_sign_in_short">LOGIN</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="doctor_name">Nama Dokter Disini</string>
    <string name="bidang">Dokter Ahli Hewan misal</string>
    <string name="rslist">Daftar Rumah Sakit</string>
    <string name="dclist">Daftar Dokter C1</string>
    <string name="action_settings">setting</string>
    <string name="tv_nama">Nama Dokter</string>
    <string name="hint_nama">Masukan Nama Dokter</string>
    <string name="btn_simpan">SIMPAN</string>
    <string name="tv_ahli">Bidang Dokter</string>
    <string name="hint_ahli">Masukan Bidang Dokter</string>
    <string name="tv_keterangan">Keterangan</string>
    <string name="hint_keterangan">Masukan Keterangan</string>
</resources>
